@startuml

class Employee {
  - _id: ObjectId
  - names: String
  - lastNames: String
  - created: DateTime
  - updated: DateTime
  - userId: int
}

class Priority {
  - _id: ObjectId
  - name: String
  - created: DateTime
  - updated: DateTime
}

class Asset {
  - _id: ObjectId
  - name: String
  - description: String
  - created: DateTime
  - updated: DateTime
}

class Tag{
  - _id: ObjectId
  - name: String
  - created: DateTime
  - updated: DateTime
}

class IssueState {
  - _id: ObjectId
  - name: String
  - created: DateTime
  - updated: DateTime
}

class Issue {
  - _id: ObjectId
  - resume: String
  - description: String
  - issueStateId: ObjectId
  - priorityId: ObjectId
  - assetsIds: Array[ObjectIds]
  - tagsIds: Array[ObjectIds]
  - visorsIds: Array[ObjectIds]
  - editorsIds: Array[ObjectIds]
  - histories: Array[ObjectIds]
  - documents: Array[Document]
  - reporterId: ObjectId
  - reportered: DateTime
  - created: DateTime
  - updated: DateTime
}

class History {
  - _id: ObjectId
  - description: String
  - reportered: ObjectId
  - documents: Array[Document]
  - created: DateTime
  - updated: DateTim
}

class Document <<embedded>>{
  - _id: ObjectId
  - name: String
  - description: String
  - size: Integer
  - mime: String
  - url: String
  - created: DateTime
}

class Track {
  - _id: ObjectId
  - issue_id: ObjectId
  - logs: Array[Log]
}

class Log <<embedded>>{
  - _id: ObjectId
  - operation: String
  - description: String
  - user_id: String
  - created: DateTime
}

Issue "n" *-- "1" Employee : crea
Issue "n" o-- "n" Employee : mira
Issue "n" o-- "n" Employee : edita
Issue "n" *-- "1" IssueState : tiene
Issue "n" *-- "1" Priority : tiene
Issue "n" o-- "n" Asset : tiene
Issue "n" o-- "n" Tag : tiene
Issue "1" o-- "n" History : tiene
Issue "1" o-- "n" Document : tiene
History "1" o-- "n" Document : tiene
History "1" *-- "n" Employee : genera
Track "1" *-- "n" Log : registra
Issue "1" --* "n" Track : registra

@enduml
